--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,76 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* color: #333; */
+}
+p {
+  font-size: 20px;
+}
+.App {
+  max-width: 600px;
+  margin: 0 auto;
+  border-radius: 15px;
+  height: 600px;
+}
+.header {
+  max-width: 600px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 20px;
+  margin-top: 50px;
+}
+.time-body {
+  margin: 0 auto;
+  padding: 20px;
+  margin-left: 50px;
+}
+.time-body h1 {
+  color: #f1356d;
+  font-weight: bolder;
+  font-size: 70px;
+  margin-bottom: 10px;
+}
+.time-body h3 {
+  color: #f1356d;
+  font-weight: bolder;
+  font-size: 50px;
+  border: 2px solid;
+  border-radius: 10px;
+  margin-right: 160px;
+  text-align: center;
+}
+.about {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.fontAwe {
+  display: flex;
+}
+.faTw,
+.faIg,
+.faGh,
+.faGm {
+  font-size: large;
+  margin: 10px;
+  color: #333;
+}
+.faGh:hover {
+  font-size: x-large;
+  transition: 0.2s;
+}
+.faIg:hover {
+  color: red;
+  font-size: x-large;
+  transition: 0.2s;
+}
+.faTw:hover {
+  color: #1da1f2;
+  font-size: x-large;
+  transition: 0.2s;
+}
+.faGm:hover {
+    color: rgb(0, 0, 0);
+  font-size: x-large;
+  transition: 0.2s;
 }
